Add scene flow and add switch

--- a/app.json
+++ b/app.json
@@ -53,6 +53,49 @@
         "large": "/drivers/light/assets/images/large.png",
         "small": "/drivers/light/assets/images/small.png"
       }
+    },
+    {
+      "id": "switch",
+      "name": {
+        "en": "switch"
+      },
+      "class": "socket",
+      "capabilities": [
+        "onoff"
+      ],
+      "pair": [
+        {
+          "id": "list_devices",
+          "template": "list_devices",
+          "navigation": {
+            "next": "add_devices"
+          }
+        },
+        {
+          "id": "add_devices",
+          "template": "add_devices"
+        }
+      ],
+      "images": {
+        "large": "/drivers/switch/assets/images/large.png",
+        "small": "/drivers/switch/assets/images/small.png"
+      }
     }
-  ]
+  ],
+  "flow": {
+    "actions": [
+      {
+        "id": "setScene",
+        "title": {
+          "en": "Set a mood"
+        },
+        "args": [
+          {
+            "name": "scene",
+            "type": "autocomplete"
+          }
+        ]
+      }
+    ]
+  }
 }
