Prepare for Store

--- a/app.json
+++ b/app.json
@@ -12,7 +12,7 @@
   "compatibility": ">=1.5.3",
   "author": {
     "name": "Jurgen Heine",
-    "email": "private"
+    "email": "jurgen2.heine@gmail.com"
   },
   "contributors": {
     "developers": []
