--- a/app.json
+++ b/app.json
@@ -8,7 +8,7 @@
     "en": "This app allows you to connect Homey to the Tuya cloud"
   },
   "category": "lights",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "compatibility": ">=1.5.3",
   "author": {
     "name": "Jurgen Heine",
@@ -17,6 +17,11 @@
   "contributors": {
     "developers": []
   },
+  "bugs": {
+    "url": "https://github.com/jurgenheine/com.tuya.cloud/issues"
+  },
+  "source": "https://github.com/jurgenheine/com.tuya.cloud",
+  "homepage": "https://github.com/jurgenheine/com.tuya.cloud/blob/master/README.md",
   "permissions": [],
   "images": {
     "large": "/assets/images/large.png",
