Renamed "set a mood"  to "trigger a scene"

--- a/app.json
+++ b/app.json
@@ -137,7 +137,7 @@
       {
         "id": "setScene",
         "title": {
-          "en": "Set a mood"
+          "en": "Trigger a scene"
         },
         "args": [
           {
