--- a/app.json
+++ b/app.json
@@ -30,10 +30,10 @@
   },
   "drivers": [
     {
-      "id": "light",
+      "id": "oldlight",
       "name": {
-        "en": "Light",
-        "nl": "Verlichting"
+        "en": "Light (Legacy)",
+        "nl": "Verlichting (Legacy)"
       },
       "class": "light",
       "capabilities": [
@@ -154,10 +154,10 @@
       }
     },
     {
-      "id": "switch",
+      "id": "oldswitch",
       "name": {
-        "en": "switch",
-        "nl": "schakelaar"
+        "en": "switch (Legacy)",
+        "nl": "schakelaar (Legacy)"
       },
       "class": "button",
       "capabilities": [
@@ -182,10 +182,10 @@
       }
     },
     {
-      "id": "socket",
+      "id": "oldsocket",
       "name": {
-        "en": "socket",
-        "nl": "stopcontact"
+        "en": "socket  (Legacy)",
+        "nl": "stopcontact  (Legacy)"
       },
       "class": "socket",
       "capabilities": [
@@ -210,10 +210,10 @@
       }
     },
     {
-      "id": "cover",
+      "id": "oldcover",
       "name": {
-        "en": "cover",
-        "nl": "deksel"
+        "en": "cover (Legacy)",
+        "nl": "scherm (Legacy)"
       },
       "class": "windowcoverings",
       "capabilities": [
