--- a/package.json
+++ b/package.json
@@ -5,7 +5,17 @@
   "main": "app.js",
   "dependencies": {
     "everpolate": "0.0.3",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "@clubedaentrega/cipher": "^1.0.0",
+    "aes-decrypter": "^3.1.2",
+    "axios": "^0.21.1",
+    "chai": "^4.3.4",
+    "crypto-js": "^4.0.0",
+    "js-base64": "^3.6.1",
+    "mqtt": "^4.2.6",
+    "string-cipher": "^1.0.8",
+    "text-encoding": "^0.7.0",
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "run": "homeyConfig compose && athom project --run",
