fix light update

--- a/app.json
+++ b/app.json
@@ -400,7 +400,8 @@
         "dim",
         "light_temperature",
         "light_hue",
-        "light_saturation"
+        "light_saturation",
+        "light_mode"
       ],
       "id": "tuyalight"
     },
