--- a/.homeycompose/app.json
+++ b/.homeycompose/app.json
@@ -10,8 +10,8 @@
     "nl": "Deze app laat je connectie maken met de Tuya cloud"
   },
   "category": "lights",
-  "version": "0.1.5",
-  "compatibility": ">=1.5.3",
+  "version": "1.0.0",
+  "compatibility": ">=5.0.0",
   "author": {
     "name": "Jurgen Heine",
     "email": "jurgen2.heine@gmail.com"
@@ -39,5 +39,10 @@
   "images": {
     "large": "/assets/images/large.jpg",
     "small": "/assets/images/small.jpg"
+  },
+  "api": {
+    "connect": {
+      "method": "get",
+      "path": "/connect/"
+    }
   }
-}
