Fix several errors with legacy API with SDK3

--- a/app.json
+++ b/app.json
@@ -43,8 +43,8 @@
   },
   "api": {
     "connect": {
-      "method": "get",
-      "path": "/connect/"
+      "method": "GET",
+      "path": "/"
     }
   },
   "flow": {
