--- a/.homeycompose/app.json
+++ b/.homeycompose/app.json
@@ -42,8 +42,8 @@
   },
   "api": {
     "connect": {
-      "method": "get",
-      "path": "/connect/"
+      "method": "GET",
+      "path": "/"
     }
   }
 }
