--- a/app.json
+++ b/app.json
@@ -11,7 +11,7 @@
     "nl": "Deze app laat je connectie maken met de Tuya cloud"
   },
   "category": "lights",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "compatibility": ">=5.0.0",
   "author": {
     "name": "Jurgen Heine",
@@ -27,6 +27,9 @@
       },
       {
         "name": "Peter Keuter"
+      },
+      {
+        "name": "Adrian Rockall"
       }
     ]
   },
