fix settings, first attemp to get error passthrough to settingspage. Refresh scenes

--- a/.homeycompose/app.json
+++ b/.homeycompose/app.json
@@ -47,6 +47,10 @@
     "connect": {
       "method": "GET",
       "path": "/"
+    },
+    "refreshScenes": {
+      "method": "GET",
+      "path": "/refreshScenes/"
     }
   }
 }
