--- a/app.json
+++ b/app.json
@@ -158,8 +158,8 @@
       },
       {
         "title": {
-          "en": "Tyua boolean event received",
-          "nl": "Tyua boolean bericht ontvangen"
+          "en": "Boolean event received",
+          "nl": "Boolean bericht ontvangen"
         },
         "titleFormatted": {
           "en": "Boolean event received",
@@ -170,8 +170,8 @@
             "name": "tuyaDeviceId",
             "type": "string",
             "title": {
-              "en": "Tuya Device id",
-              "nl": "Tuya apparaat id"
+              "en": "Device id",
+              "nl": "Apparaat id"
             }
           },
           {
@@ -195,8 +195,8 @@
       },
       {
         "title": {
-          "en": "Tyua number event received",
-          "nl": "Tyua numeriek bericht ontvangen"
+          "en": "Number event received",
+          "nl": "Numeriek bericht ontvangen"
         },
         "titleFormatted": {
           "en": "Number event received",
@@ -207,8 +207,8 @@
             "name": "tuyaDeviceId",
             "type": "string",
             "title": {
-              "en": "Tuya Device id",
-              "nl": "Tuya apparaat id"
+              "en": "Device id",
+              "nl": "Apparaat id"
             }
           },
           {
@@ -232,8 +232,8 @@
       },
       {
         "title": {
-          "en": "Tyua text event received",
-          "nl": "Tyua tekst bericht ontvangen"
+          "en": "Text event received",
+          "nl": "Tekst bericht ontvangen"
         },
         "titleFormatted": {
           "en": "Text event received",
@@ -244,8 +244,8 @@
             "name": "tuyaDeviceId",
             "type": "string",
             "title": {
-              "en": "Tuya Device id",
-              "nl": "Tuya apparaat id"
+              "en": "Device id",
+              "nl": "Apparaat id"
             }
           },
           {
@@ -299,12 +299,12 @@
     "actions": [
       {
         "title": {
-          "en": "Send false command to Tuya",
-          "nl": "Vertuur niet waar commando naar Tuya"
+          "en": "Send false command",
+          "nl": "Vertuur niet waar commando"
         },
         "titleFormatted": {
-          "en": "Send [[functionname]] command with value \"false\" to Tuya device [[tuyaDeviceId]]",
-          "nl": "Vertuur [[functionname]] commando met waarde \"niet\" waar naar Tuya apparaat [[tuyaDeviceId]]"
+          "en": "Send [[functionname]] command with value \"false\" to device [[tuyaDeviceId]]",
+          "nl": "Vertuur [[functionname]] commando met waarde \"niet\" waar naar apparaat [[tuyaDeviceId]]"
         },
         "args": [
           {
@@ -328,20 +328,20 @@
       },
       {
         "title": {
-          "en": "Send number command to Tuya",
-          "nl": "Vertuur numerieke commando naar Tuya"
+          "en": "Send number command",
+          "nl": "Vertuur numerieke commando"
         },
         "titleFormatted": {
-          "en": "Send [[functionname]] command with number value [[functionValue]] to Tuya device [[tuyaDeviceId]]",
-          "nl": "Vertuur [[functionname]] commando met numerieke waarde [[functionValue]] naar Tuya apparaat [[tuyaDeviceId]]"
+          "en": "Send [[functionname]] command with number value [[functionValue]] to device [[tuyaDeviceId]]",
+          "nl": "Vertuur [[functionname]] commando met numerieke waarde [[functionValue]] naar apparaat [[tuyaDeviceId]]"
         },
         "args": [
           {
             "name": "tuyaDeviceId",
             "type": "text",
             "title": {
-              "en": "Tuya Device id",
-              "nl": "Tuya apparaat id"
+              "en": "Device id",
+              "nl": "Apparaat id"
             }
           },
           {
@@ -365,20 +365,20 @@
       },
       {
         "title": {
-          "en": "Send text command to Tuya",
-          "nl": "Vertuur tekst commando naar Tuya"
+          "en": "Send text command",
+          "nl": "Vertuur tekst commando"
         },
         "titleFormatted": {
-          "en": "Send [[functionname]] command with text value [[functionValue]] to Tuya device [[tuyaDeviceId]]",
-          "nl": "Vertuur [[functionname]] commando met tekst waarde [[functionValue]] naar Tuya apparaat [[tuyaDeviceId]]"
+          "en": "Send [[functionname]] command with text value [[functionValue]] to device [[tuyaDeviceId]]",
+          "nl": "Vertuur [[functionname]] commando met tekst waarde [[functionValue]] naar apparaat [[tuyaDeviceId]]"
         },
         "args": [
           {
             "name": "tuyaDeviceId",
             "type": "text",
             "title": {
-              "en": "Tuya Device id",
-              "nl": "Tuya apparaat id"
+              "en": "Device id",
+              "nl": "Apparaat id"
             }
           },
           {
@@ -402,20 +402,20 @@
       },
       {
         "title": {
-          "en": "Send true command to Tuya",
+          "en": "Send true command",
           "nl": "Vertuur waafr commando naar Tuya"
         },
         "titleFormatted": {
-          "en": "Send [[functionname]] command with \"true\" to Tuya device [[tuyaDeviceId]]",
-          "nl": "Vertuur [[functionname]] commando met waarde \"waar\" naar Tuya apparaat [[tuyaDeviceId]]"
+          "en": "Send [[functionname]] command with \"true\" to device [[tuyaDeviceId]]",
+          "nl": "Vertuur [[functionname]] commando met waarde \"waar\" naar apparaat [[tuyaDeviceId]]"
         },
         "args": [
           {
             "name": "tuyaDeviceId",
             "type": "text",
             "title": {
-              "en": "Tuya Device id",
-              "nl": "Tuya apparaat id"
+              "en": "Device id",
+              "nl": "Apparaat id"
             }
           },
           {
@@ -719,8 +719,7 @@
       "class": "sensor",
       "capabilities": [
         "alarm_contact",
-        "measure_battery",
-        "alarm_battery"
+        "measure_battery"
       ],
       "energy": {
         "batteries": [
@@ -836,8 +835,7 @@
       "class": "sensor",
       "capabilities": [
         "alarm_motion",
-        "measure_battery",
-        "alarm_battery"
+        "measure_battery"
       ],
       "energy": {
         "batteries": [
@@ -929,8 +927,7 @@
       "class": "sensor",
       "capabilities": [
         "alarm_smoke",
-        "measure_battery",
-        "alarm_battery"
+        "measure_battery"
       ],
       "energy": {
         "batteries": [
