--- a/app.json
+++ b/app.json
@@ -300,11 +300,11 @@
       {
         "title": {
           "en": "Send false command",
-          "nl": "Vertuur niet waar commando"
+          "nl": "Verstuur niet waar commando"
         },
         "titleFormatted": {
           "en": "Send [[functionname]] command with value \"false\" to device [[tuyaDeviceId]]",
-          "nl": "Vertuur [[functionname]] commando met waarde \"niet\" waar naar apparaat [[tuyaDeviceId]]"
+          "nl": "Verstuur [[functionname]] commando met waarde \"niet\" waar naar apparaat [[tuyaDeviceId]]"
         },
         "args": [
           {
@@ -329,11 +329,11 @@
       {
         "title": {
           "en": "Send number command",
-          "nl": "Vertuur numerieke commando"
+          "nl": "Verstuur numerieke commando"
         },
         "titleFormatted": {
           "en": "Send [[functionname]] command with number value [[functionValue]] to device [[tuyaDeviceId]]",
-          "nl": "Vertuur [[functionname]] commando met numerieke waarde [[functionValue]] naar apparaat [[tuyaDeviceId]]"
+          "nl": "Verstuur [[functionname]] commando met numerieke waarde [[functionValue]] naar apparaat [[tuyaDeviceId]]"
         },
         "args": [
           {
@@ -366,11 +366,11 @@
       {
         "title": {
           "en": "Send text command",
-          "nl": "Vertuur tekst commando"
+          "nl": "Verstuur tekst commando"
         },
         "titleFormatted": {
           "en": "Send [[functionname]] command with text value [[functionValue]] to device [[tuyaDeviceId]]",
-          "nl": "Vertuur [[functionname]] commando met tekst waarde [[functionValue]] naar apparaat [[tuyaDeviceId]]"
+          "nl": "Verstuur [[functionname]] commando met tekst waarde [[functionValue]] naar apparaat [[tuyaDeviceId]]"
         },
         "args": [
           {
@@ -403,11 +403,11 @@
       {
         "title": {
           "en": "Send true command",
-          "nl": "Vertuur waafr commando naar Tuya"
+          "nl": "Verstuur waar commando naar Tuya"
         },
         "titleFormatted": {
           "en": "Send [[functionname]] command with \"true\" to device [[tuyaDeviceId]]",
-          "nl": "Vertuur [[functionname]] commando met waarde \"waar\" naar apparaat [[tuyaDeviceId]]"
+          "nl": "Verstuur [[functionname]] commando met waarde \"waar\" naar apparaat [[tuyaDeviceId]]"
         },
         "args": [
           {
